[project]
name = "multimodal-agentic-rl-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.3.0",
    "matplotlib>=3.11.0",
    "minigrid>=3.1.0",
    "numpy>=2.5.1",
    "stable-baselines3>=2.9.0",
    "tensorboard>=2.21.0",
    "torch>=2.13.0",
]
