[project]
name = "multimodal-agentic-rl-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.117.0",
    "boto3>=1.43.50",
    "fastapi>=0.139.2",
    "gymnasium>=1.3.0",
    "imageio>=2.37.3",
    "matplotlib>=3.11.0",
    "minigrid>=3.1.0",
    "numpy>=2.5.1",
    "openai>=2.46.0",
    "pillow>=12.3.0",
    "sentence-transformers>=5.6.0",
    "stable-baselines3>=2.9.0",
    "tensorboard>=2.21.0",
    "torch>=2.13.0",
    "uvicorn>=0.51.0",
]
